--- a/blocks/src/blocks/nav-container/style.scss
+++ b/blocks/src/blocks/nav-container/style.scss
@@ -103,12 +103,12 @@
         max-width: 500px;
         z-index: 9998;
         background-color: var(--wp--preset--color--base);
-        height: 100vh;
-        overflow: hidden;
+        // height: 100vh;
+        // overflow: hidden;
 
         .flyout-content {
-            height: calc(100vh - (var(--wp--preset--spacing--60) * 2));
-            overflow-y: auto;
+            // height: calc(100vh - (var(--wp--preset--spacing--60) * 2));
+            // overflow-y: auto;
             box-sizing: border-box;
         }
     }
